# dnbr-burn-severity

./: .gitignore  CLAUDE.md  README.md  config.json  layout.json  spec.yaml
ecoscope-workflows-dnbr-burn-severity-workflow/: Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-dnbr-burn-severity-workflow/dnbr-severity-tasks/: pyproject.toml
ecoscope-workflows-dnbr-burn-severity-workflow/dnbr-severity-tasks/dnbr_severity_tasks/: __init__.py
ecoscope-workflows-dnbr-burn-severity-workflow/ecoscope_workflows_dnbr_burn_severity_workflow/: cli.py  params.json  rjsf.json
ecoscope-workflows-dnbr-burn-severity-workflow/ecoscope_workflows_dnbr_burn_severity_workflow/dags/: run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-dnbr-burn-severity-workflow/tests/: conftest.py  test_metadata.py
